public/analytics-pro/v0.13/_sources/reference/tmlt/analytics/tuner/_error_report/index.rst.txt
:orphan:


..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024


********************
_error_report
********************

.. py:module:: tmlt.analytics.tuner._error_report

.. autoapi-nested-parse::

   Error Report output types.











Classes
=======

.. list-table::

   * - :class:`.ProtectedInput`
     - A protected input that was used for an :class:`~.ErrorReport`.
   * - :class:`.UnprotectedInput`
     - An unprotected input that was used for an :class:`~.ErrorReport`.
   * - :class:`.ErrorReport`
     - Output of a single error report run.
   * - :class:`.MultiErrorReport`
     - Output of an error report run across multiple input combinations.

   
..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024
.. py:class:: ProtectedInput

   Bases: :class:`NamedTuple`

   A protected input that was used for an :class:`~.ErrorReport`.

   .. warning::

       Note that normally ProtectedInputs are treated as sensitive and would not
       accessible to the user except through the :class:`~.session.Session` API to
       avoid violating differential privacy. But these error reports are not
       differentially private, and for this reason it is highly recommended to avoid
       using sensitive data in error reports, and to instead use synthetic data or
       other non-sensitive data.

       For these reasons, the protected inputs used in error reports are attached to
       the outputs for your convenience, but it is ultimately your responsibility to
       ensure that truly sensitive data is not used inappropriately.





   .. py:attribute:: name
      :annotation: :str

      The name of the input.

   .. py:attribute:: dataframe
      :annotation: :pyspark.sql.DataFrame

      A dataframe containing the protected data used for the report.

   .. py:attribute:: protected_change
      :annotation: :tmlt.analytics.protected_change.ProtectedChange

      What changes to the protected data the Session should protect.



   
..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024
.. py:class:: UnprotectedInput

   Bases: :class:`NamedTuple`

   An unprotected input that was used for an :class:`~.ErrorReport`.





   .. py:attribute:: name
      :annotation: :str

      The name of the input.

   .. py:attribute:: dataframe
      :annotation: :pyspark.sql.DataFrame

      A dataframe containing the unprotected data used for the report.



   
..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024
.. py:class:: ErrorReport

   Output of a single error report run.

   .. note::

       |PRO_NOTE|


   This class is not intended to be constructed directly. Instead, it is returned by
   the :meth:`~.tuner.SessionProgramTuner.error_report` method.



   .. list-table:: Attributes

      * - :attr:`.tunable_values`
        - The values of the tunable parameters used for this error report.
      * - :attr:`.parameters`
        - The non-tunable parameters used for this error report.
      * - :attr:`.protected_inputs`
        - The protected inputs used for this error report.
      * - :attr:`.unprotected_inputs`
        - The unprotected inputs used for this error report.
      * - :attr:`.privacy_budget`
        - The privacy budget used for this error report.
      * - :attr:`.dp_outputs`
        - The differentially private outputs of the program.
      * - :attr:`.baseline_outputs`
        - The outputs of the baseline program.
      * - :attr:`.metric_results`
        - The metrics computed on the outputs of the dp and baseline programs.

   .. list-table:: Methods

      * - :meth:`.result_dataframes`
        - Return the result dataframes for each metric.
      * - :meth:`.format`
        - Return a string representation of this object.
      * - :meth:`.show`
        - Prints the error report in a nicely-formatted, human-readable way.



   .. py:attribute:: tunable_values
      :annotation: :Dict[str, Any]

      The values of the tunable parameters used for this error report.

   .. py:attribute:: parameters
      :annotation: :Dict[str, Any]

      The non-tunable parameters used for this error report.

   .. py:attribute:: protected_inputs
      :annotation: :Dict[str, ProtectedInput]

      The protected inputs used for this error report.

   .. py:attribute:: unprotected_inputs
      :annotation: :Dict[str, UnprotectedInput]

      The unprotected inputs used for this error report.

   .. py:attribute:: privacy_budget
      :annotation: :tmlt.analytics.privacy_budget.PrivacyBudget

      The privacy budget used for this error report.

   .. py:attribute:: dp_outputs
      :annotation: :Dict[str, pyspark.sql.DataFrame]

      The differentially private outputs of the program.

   .. py:attribute:: baseline_outputs
      :annotation: :Dict[str, Dict[str, pyspark.sql.DataFrame]]

      The outputs of the baseline program.

   .. py:attribute:: metric_results
      :annotation: :List[tmlt.analytics.metrics._base.MetricResult]

      The metrics computed on the outputs of the dp and baseline programs.


   .. py:method:: result_dataframes()

      Return the result dataframes for each metric.


   .. py:method:: format()

      Return a string representation of this object.


   .. py:method:: show()

      Prints the error report in a nicely-formatted, human-readable way.



   
..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024
.. py:class:: MultiErrorReport(reports)

   Output of an error report run across multiple input combinations.

   .. note::

       |PRO_NOTE|


   This class is not intended to be constructed directly. Instead, it is returned by
   the :meth:`~.tuner.SessionProgramTuner.multi_error_report` method.






   .. automethod:: __init__
   .. py:method:: reports()
      :property:

      Return the error reports.


   .. py:method:: __iter__()

      Return an iterator over the error reports.


   .. py:method:: result_dataframes()

      Return the result dataframes for each metric combined across runs.

      Each metric produces a separate dataframe. The  dataframes are keyed
      by the metric names.


   .. py:method:: dataframe()

      Return a dataframe representation of the error reports.

      The dataframe will have a row for each error report (run) and a column for each
      tunable and metric. If grouped metrics are specified, the dataframe will
      also have a row for the grouping columns.

      If not all metrics have the same (or no) grouping column, this will throw an
      error.







